data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2046.wast
;; 6. **Backward Branch in Loop with Mismatched Operands:**    Define a `br_table` with backward branching and mismatched operand stacks.    - **Test Constraint:** Backward branches need to match the operand requirements of the loop.    - **Expected Differential:** WebAssembly should enforce operand type compatibility, whereas wizard_engine might incorrectly loop back.

(assert_invalid
  (module
    (func
      (block
        (loop (result i32)
          (br_table 0 1 (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)